@@ -90,6 +90,7 @@ CREATE TABLE 'colnametests' (
 CREATE TABLE 'mixins' (
   'id' INTEGER NOT NULL PRIMARY KEY,
   'parent_id' INTEGER DEFAULT NULL,
+  'type' VARCHAR(40) DEFAULT NULL,  
   'pos' INTEGER DEFAULT NULL,
   'lft' INTEGER DEFAULT NULL,
   'rgt' INTEGER DEFAULT NULL,
